2010-05-25 Jim Garlick <garlick@llnl.gov>

	* : Tagging lmt-2.6.4-1

	* lmt.spec : Drop upgrade_lmtconfig-1.1 from package as it causes
	lmt-server to require perl(Hostlist) and probably isn't really needed
	anymore.

2009-10-16 Jim Garlick <garlick@llnl.gov>

	* : Tagging lmt-2.6.3-3

	* lmt.spec : BuildRequires IBM java if building on ch4 [chaos bz 831]

2009-08-19 Jim Garlick <garlick@llnl.gov>

	* : Tagging lmt-2.6.3-2

	* server/src/autogen.sh, server/src/config/* : Fix an inadvertant
	build-time dependency on libtool.

2009-08-19 Jim Garlick <garlick@llnl.gov>

	* : Tagging lmt-2.6.3

	* Makefile : Change URL to google code, clean up unused stuff.

	* scripts/build : Check in missing Build Buddha script.

	* server/src : Check in configure scripts, Makefile.in's, etc..

	* scripts/build-lmt-server.sh : Do not call autogen.

	* scripts/distro.sh : Removed, not used.

	* lmt.spec : Drop BuildRequires: ant-scripts as this seems not needed.
	Drop BuildRequires for autotools since we checked in products.
	Make BuildRequires for jre and java-devel instead of ibm-specific.

	* NEWS : Summarize LMT 2.x releases so far.

	* README : Update the somewhat dated description.

2009-07-03 Jim Garlick <garlick@llnl.gov>

	* server/src/scripts/create_lmtconfig.pl :
	- Add 'startidx' statement which can be used to continue an ost
	sequence in a new ost stanza [Herb Wartens].
	- Use Getopt() for argument parsing.
	- Incorporate Hostlist::expand() directly into script to avoid
	unexpressed dependency on Hostlist.pm.
	- Drop unused portions of config parser.
	- Cat /usr/share/lmt/etc/create_schema-1.1.sql instead of
	embedding the table creation SQL code in perl strings.
	- Eliminate -t option.
	- Add argument to -d option, which specifies the name of the file
	system to create the database (including tables) for.
	- Add support for ldev.conf.  Make it the default if config file
	is not specified.  Add -F ldev-file to override path.
