@@ -1,4 +1,4 @@
 Meta:		1
 Name:		lmt
 Version:	2.6.4
-Release:	1
+Release:	2
