@@ -74,7 +74,7 @@ lmt_metric_router_get_value(unsigned int *metric_value_type,
 
         if (!common_metric_lmt_isrouter()) {
                 /* cerebro_err_debug("not a router node"); */
-                return CEREBRO_ERR_INTERNAL;
+                return 0;
         }
 
         buflen = CEREBRO_MAX_DATA_STRING_LEN / sizeof(char);
