@@ -1,3 +1,11 @@
+2010-09-17 Jim Garlick <garlick@llnl.gov>
+
+	* : Tagging lmt-2.6.4-2
+
+	* server/src/modules/metric/* : Suppress some unnecessary error
+	messages that can happen when lustre is stopped not running
+	per gcode issue #15.
+
 2010-05-25 Jim Garlick <garlick@llnl.gov>
 
 	* : Tagging lmt-2.6.4-1
